--- a/Index.html
+++ b/Index.html
@@ -223,8 +223,8 @@
     <!-- Seção Hero -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Encontre o PC dos seus sonhos!</h1>
-            <p>Desktops, laptops e componentes para todas as necessidades.</p>
+            <h1 style="color: black;">Encontre o PC dos seus sonhos!</h1>
+            <p style="color: black;">Desktops, laptops e componentes para todas as necessidades.</p>
             <a href="#produtos" class="cta-button">Veja nossos Produtos</a>
         </div>
     </section>
