--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="shortcut icon" type="imagex/png" href="./images/icon.ico">
+    <link rel="shortcut icon" type="imagex/png" href="icon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Texstar - Loja de PCs, computadores e componentes de informática. Compre seu PC ideal.">
