--- a/Index.html
+++ b/Index.html
@@ -263,7 +263,7 @@
 
     <!-- Seção de Contato -->
     <section id="contato" class="contato">
-        <h2>Entre em Contato</h2>
+        <h2>Entre em Contato (Respondemos em até 2 dias úteis) </h2>
         <form id="form-contato">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
@@ -281,6 +281,7 @@
     <!-- Rodapé -->
     <footer>
         <p>&copy; 2025 Texstar. Todos os direitos reservados.</p>
+        <p>Feito por Hawer e Gustavo</p>
     </footer>
 
     <script>
